win32/NET/netcdf_vb/NetCDF.vb


    ' int nc_put_vara_text(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const char *op);
    Declare Ansi Function nc_put_vara_text Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, ByVal op As String) As Int32
    ' int nc_get_vara_text(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, char *ip);
    Declare Ansi Function nc_get_vara_text Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, ByVal op As StringBuilder) As Int32
    ' int nc_put_vara_uchar(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const unsigned char *op);
    Declare Ansi Function nc_put_vara_uchar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal op() As Byte) As Int32
    ' int nc_get_vara_uchar(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, unsigned char *ip);
    Declare Ansi Function nc_get_vara_uchar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal ip() As Byte) As Int32
    ' int nc_put_vara_schar(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const signed char *op);
    Declare Ansi Function nc_put_vara_schar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal op() As Byte) As Int32
    ' int nc_get_vara_schar(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, signed char *ip);
    Declare Ansi Function nc_get_vara_schar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal ip() As Byte) As Int32
    ' int nc_put_vara_short(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const short *op);
    Declare Ansi Function nc_put_vara_short Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal op() As Short) As Int32
    ' int nc_get_vara_short(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, short *ip);
    Declare Ansi Function nc_get_vara_short Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal ip() As short) As Int32
    ' int nc_put_vara_int(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const int *op);
    Declare Ansi Function nc_put_vara_int Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal op() As Int32) As Int32
    ' int nc_get_vara_int(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, int *ip);
    Declare Ansi Function nc_get_vara_int Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal ip() As Int32) As Int32
    ' int nc_put_vara_long(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const long *op);
    Declare Ansi Function nc_put_vara_long Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal op() As Int32) As Int32
    ' int nc_get_vara_long(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, long *ip);
    Declare Ansi Function nc_get_vara_long Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal ip() As Int32) As Int32
    ' int nc_put_vara_float(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const float *op);
    Declare Ansi Function nc_put_vara_float Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal op() As Single) As Int32
    ' int nc_get_vara_float(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, float *ip);
    Declare Ansi Function nc_get_vara_float Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal ip() As Single) As Int32
    ' int nc_put_vara_double(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const double *op);
    Declare Ansi Function nc_put_vara_double Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal op() As Double) As Int32
    ' int nc_get_vara_double(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, double *ip);
    Declare Ansi Function nc_get_vara_double Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal ip() As Double) As Int32

    'READING AND WRITING SUBSETS OF ARRAYS WITH START, COUNT, and STRIDE ARRAYS
